优化代码，为了兼容高级jdk,在roundEnv over之前处理注解